added first draft of HTML & CSS

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Iron Yard Front End Boilerplate</title>
-
-    <link rel="stylesheet" href="css/main.css" media="screen" charset="utf-8">
+    <title>Alphabet Flashcards</title>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300|Lobster|Exo|Courgette' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="scss/main.scss" media="screen" charset="utf-8">
   </head>
   <body>
+      <main>
+        <section id="title">
+          <div class="box-top">
+            <h1>Alphabet Flashcards</h1>
+          </div>
+        </section>
 
-    <h1>Iron Yard Front End Boilerplate</h1>
+        <section id="capitals">
+          <div class="box-left">
+            <h2>CAPITAL LETTERS</h2>
+          </div>
+        </section>
+
+        <section id="lowercase">
+          <div class="box-middle">
+            <h2>lowercase letters</h2>
+          </div>
+        </section>
+
+        <section id="cursive">
+          <div class="box-right">
+            <h2>Cursive Letters</h2>
+          </div>
+        </section>
+      </main>
     <!-- Third Party Libraries -->
 
     <!-- App Specific Files-->
