--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Alphabet Flashcards</title>
+    <title>Letter Morpher</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300|Lobster|Exo|Courgette' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="scss/main.scss" media="screen" charset="utf-8">
   </head>
@@ -10,25 +10,43 @@
       <main>
         <section id="title">
           <div class="box-top">
-            <h1>Alphabet Flashcards</h1>
+            <h1>Letter Morpher</h1>
           </div>
         </section>
 
         <section id="capitals">
           <div class="box-left">
             <h2>CAPITAL LETTERS</h2>
+            <div class="input1">
+              <h2>Text In</h2>
+            </div>
+            <div class="output1">
+              <h2>Text Out</h2>
+            </div>
           </div>
         </section>
 
         <section id="lowercase">
           <div class="box-middle">
             <h2>lowercase letters</h2>
+            <div class="input2">
+              <h2>Text In</h2>
+            </div>
+            <div class="output2">
+              <h2>Text Out</h2>
+            </div>
           </div>
         </section>
 
         <section id="cursive">
           <div class="box-right">
             <h2>Cursive Letters</h2>
+            <div class="input3">
+              <h2>Text In</h2>
+            </div>
+            <div class="output3">
+              <h2>Text Out</h2>
+            </div>
           </div>
         </section>
       </main>
