backbone assignment with partial backbone

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <main>
         <section id="title">
           <div class="box-top">
-            <h1>Letter Morpher</h1>
+            <h1>Letter Morphing</h1>
           </div>
         </section>
 
@@ -51,7 +51,9 @@
         </section>
       </main>
     <!-- Third Party Libraries -->
-
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="bower_components/backbone/backbone-min.js"></script>
     <!-- App Specific Files-->
     <script src="js/app.js"></script>
   </body>
